--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "moment": "^2.19.1",
     "router": "^1.3.2",
     "vue": "^2.5.2",
     "vue-router": "^2.8.1",
